# evolutionary-painter

./: .clang-format  .gitignore  .gitlab-ci.yml  BindWrapper.py  CMakeLists.txt  LICENSE  README.md  build.sh  notebook.ipynb  script.py
include/: EvolAlg.hpp  EvolAlgObserver.hpp  Member.hpp  StatsObserver.hpp  TerminalObserver.hpp
src/: EvolAlg.cpp  Member.cpp  StatsObserver.cpp  TerminalObserver.cpp  bindings.cpp  main.cpp
wykresy/: figury_biale_3min_20x  figury_czarne_3min_20x  papuga_2k_20x  papuga_3min_20x  pop_20k_figury_czarne  pop_2min_figury_biale  pop_2min_figury_czarne  pop_2min_papuga
